# haskell-workshop

./: CHANGELOG.md  LICENSE  Outline.md  README.md  haskell-workshop.cabal  setup.md
app/: Main.hs
src/: Applicative.hs  Functions.hs  Functor.hs  Monad.hs  Monoid.hs  PatternMatching.hs  Typeclasses.hs  Types.hs
src/Game/Go/: Board.hs  Game.hs  Launch.hs  Parsers.hs  Ui.hs
