cabal-version:       2.4
name:                haskell-workshop
version:             0.1.0.0
description:         A terminal application to play go.
license:             BSD-3-Clause
license-file:        LICENSE
author:              Kwan Noel
maintainer:          noelkwan1998@gmail.com
extra-source-files:  CHANGELOG.md, README.md

library
  exposed-modules:     Game.Go.Launch
  other-modules:       Game.Go.Board
                     , Game.Go.Parsers
                     , Game.Go.Ui
  build-depends:       base ^>=4.12.0.0
                     , array
                     , parsec
  hs-source-dirs:      src
  default-language:    Haskell2010

executable haskell-workshop
  main-is:             Main.hs
  build-depends:       base ^>=4.12.0.0, haskell-workshop
  hs-source-dirs:      app
  default-language:    Haskell2010


test-suite haskell-workshop-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             MyLibTest.hs
  build-depends:       base ^>=4.12.0.0, haskell-workshop
